--- a/container/package.json
+++ b/container/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "style-loader": "^3.3.0",
     "web-vitals": "^1.0.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
