--- a/details/package.json
+++ b/details/package.json
@@ -22,18 +22,19 @@
     "webpack-server": "^0.1.2"
   },
   "devDependencies": {
-    "css-loader": "^6.3.0",
-    "webpack-livereload-plugin": "3.0.2",
     "@babel/core": "7.15.5",
     "@babel/preset-react": "7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.6",
     "babel-loader": "8.2.2",
+    "css-loader": "^6.3.0",
     "external-remotes-plugin": "1.0.0",
     "html-webpack-plugin": "5.3.2",
     "react-refresh": "0.10.0",
+    "style-loader": "^3.3.0",
     "webpack": "5.52.1",
     "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.2.1"
+    "webpack-dev-server": "4.2.1",
+    "webpack-livereload-plugin": "3.0.2"
   },
   "scripts": {
     "build": "webpack --mode production",
