--- a/homescreen/package.json
+++ b/homescreen/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "babel-loader": "^8.2.2",
+    "history": "^5.0.1",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
