--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,11 @@
 {
-    "packages": ["container", "homescreen", "details"],
-    "version": "0.0.0"
-  }
+  "lerna": "2.5.1",
+  "packages": [
+    "container", 
+    "homescreen", 
+    "details"
+  ],
+  "npmClient": "yarn",
+  "version": "1.0.0"
+}
   
