--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "microfrontend",
-    "version": "1.0.0",
-    "description": "experiments with module federation in React with Webpack5",
-    "main": "index.js",
-    "repository": "https://github.com/burhanuday/module-federation-with-react",
-    "author": "burhanuday",
-    "license": "MIT",
-    "private": false,
-    "devDependencies": {
-      "lerna": "4.0.0"
-    },
-    "scripts": {
-      "start": "npx lerna run start --parallel"
-    }
+  "name": "microfrontend",
+  "version": "1.0.0",
+  "description": "experiments with module federation in React with Webpack5",
+  "main": "index.js",
+  "repository": "https://github.com/burhanuday/module-federation-with-react",
+  "license": "MIT",
+  "private": false,
+  "devDependencies": {
+    "lerna": "4.0.0"
+  },
+  "scripts": {
+    "start": "npx lerna run start --parallel",
+    "bootstrap": "npx lerna bootstrap"
   }
+}
