--- a/homescreen/package.json
+++ b/homescreen/package.json
@@ -12,6 +12,7 @@
     "history": "^5.0.1",
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
